--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Soda.AgregarProductoActivity"></activity>
         <activity
-            android:name=".Home"
-            android:label="@string/title_activity_home"></activity>
+            android:name=".Customer.HomeCustomer"
+            android:label="@string/title_activity_home_customer" />
+        <activity
+            android:name=".Soda.HomeSoda"
+            android:label="@string/title_activity_home" />
         <activity
             android:name=".Registro.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar" />
