--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'in.srain.cube:grid-view-with-header-footer:1.0.12'
     implementation 'com.github.travijuu:numberpicker:1.0.7'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'com.google.firebase:firebase-firestore:17.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
