--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NamesActivity"></activity>
+        <activity android:name=".NamesActivity" />
         <activity android:name=".Soda.AgregarProductoActivity" />
         <activity
             android:name=".Customer.HomeCustomer"
@@ -23,12 +23,19 @@
             android:name=".Registro.RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
